--- a/views/admin/services/serviceDetail.ejs
+++ b/views/admin/services/serviceDetail.ejs
@@ -4,48 +4,89 @@
             <!-- Content -->
             <div class="container-xxl flex-grow-1 container-p-y">
               <div class="row">
-                <div class="col-lg-12 mb-4 order-0">
-                    <div class="card mb-4">
-                        <h5 class="card-header">Hizmet</h5>
-                        <hr class="my-0" />
-                          <form id="serviceForm" method="POST" onsubmit="return false">
-                            <input class="form-control" type="hidden" name="updateServiceId" id="updateServiceId" value="<%=service._id%>" />
-                            <div class="card-body">
-                              <div class="row">
-                                <div class="mb-3 col-12">
-                                  <label for="firstName" class="form-label">Hizmet adı</label>
-                                  <input
-                                    class="form-control"
-                                    type="text"
-                                    id="name"
-                                    name="name"
-                                    value="<%=service.name%>"
-                                    autofocus
-                                  />
-                                </div>
-                                <div class="mb-3 col-12">
-                                  <label for="description" class="form-label">Açıklama</label>
-                                  <textarea class="form-control" type="text" name="description" id="description"><%=service.description%></textarea>
-                                </div>
-                                <div class="mb-3 col-12">
-                                  <label for="role" class="form-label">Durumu</label>
-                                  <select class="form-select status-select" aria-label="Default select example">
-                                    <option value="true">true</option>
-                                    <option value="false">false</option>
-                                  </select>
-                                </div>
-                              </div>
-                              <div class="mt-2">
-                                <button type="submit" class="btn btn-primary me-2">Güncelle</button>
-                                <button type="reset" class="btn btn-outline-primary">
-                                  <a style="color:black" href="http://localhost:3000/api/kurumsal/services">Geri dön</a>
-                                </button>
-                              </div>
+                <div class="col-lg-6 mb-4 order-0">
+                  <div class="card mb-4">
+                      <h5 class="card-header">Hizmet</h5>
+                      <hr class="my-0" />
+                      <form id="serviceForm" method="POST" onsubmit="return false">
+                        <input class="form-control" type="hidden" name="updateServiceId" id="updateServiceId" value="<%=service._id%>" />
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="mb-3 col-12">
+                              <label for="firstName" class="form-label">Hizmet adı</label>
+                              <input
+                                class="form-control"
+                                type="text"
+                                id="name"
+                                name="name"
+                                value="<%=service.name%>"
+                                autofocus
+                              />
                             </div>
-                          </form>
+                            <div class="mb-3 col-12">
+                              <label for="description" class="form-label">Açıklama</label>
+                              <textarea class="form-control" type="text" name="description" id="description" style="min-height: 300px;"><%=service.description%></textarea>
+                            </div>
+                            <div class="mb-3 col-12">
+                              <label for="role" class="form-label">Durumu</label>
+                              <select class="form-select status-select" aria-label="Default select example">
+                                <option value="true">true</option>
+                                <option value="false">false</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="mt-2">
+                            <button type="submit" class="btn btn-primary me-2">Güncelle</button>
+                            <button type="reset" class="btn btn-outline-primary">
+                              <a style="color:black" href="http://localhost:3000/api/kurumsal/services">Geri dön</a>
+                            </button>
+                          </div>
                         </div>
-                        <!-- /Account -->
+                      </form>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 mb-4 order-0">
+                  <div class="card mb-4">
+                      <h5 class="card-header">Resimler</h5>
+                      <hr class="my-0" />
+                      <div class="owl-carousel p-4">
+                        <% for (var l = service.imageUrls.length, i = 0; i < l; i++) { %>
+                          <div class="border rounded position-relative" style="width: 100%; height: 200px;">
+                            <img class="p-4" style="object-fit: contain; width: 100%; height: 100%;" src="<%=service.imageUrls[i]%>" alt="Service Image">
+                            <a class="delete-image" href="http://localhost:3000/api/kurumsal/services/imageDelete?image=<%=service.imageUrls[i]%>&serviceId=<%=service._id%>">
+                              <ul class="list-unstyled m-0 avatar-group d-flex justify-content-center align-items-center text-danger" 
+                              style="position: absolute; bottom: 5px; right: 5px;">
+                                  <li data-bs-toggle="tooltip"
+                                  data-popup="tooltip-custom"
+                                  data-bs-placement="top"
+                                  class="avatar avatar-xs d-flex justify-content-center align-items-center border rounded"
+                                  title="Fotoğrafı sil">
+                                      <span class="tf-icons bx bx-trash"></span>
+                                  </li>
+                              </ul> 
+                            </a>
+                          </div>
+                        <% } %>
                       </div>
+                      <div class="d-flex justify-content-around align-items-center p-2">
+                        <label for="upload" class="btn btn-primary me-2 mb-4 w-100" tabindex="0">
+                          <span class="d-none d-sm-block"><i class="bx bx-image-add me-1"></i>Yeni fotoğraf</span>
+                          <i class="bx bx-upload d-block d-sm-none"></i>
+                          <input
+                            type="file"
+                            id="upload"
+                            name="image"
+                            class="account-file-input"
+                            hidden
+                            accept="image/png, image/jpeg"
+                          />
+                        </label>
+                        <label for="upload" class="btn btn-primary me-2 mb-4 w-100" tabindex="0">
+                          <span class="d-none d-sm-block"><i class="bx bx-check me-1"></i>Kaydet</span>
+                        </label>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -58,6 +99,10 @@
           $(iterator).attr('selected','selected');
         }
       }
+      $(".owl-carousel").owlCarousel({
+        dots:false,
+        margin:10,
+      });
     });
 
     $("#serviceForm").on("submit",function(e) {
@@ -85,5 +130,41 @@
             contentType: false,
             processData: false
         });
+    });
+
+    $(".delete-image").on('click', function(e) {
+    e.preventDefault();
+    $.ajax({
+        url : this.href,
+        type : "GET",
+        success : (response) => {
+            Swal.fire({
+                icon: "success",
+                text: response.msg
+            });
+        },
+        error : (xhr, status, error) => {
+            Swal.fire({
+                icon: "error",
+                text: xhr.responseJSON.msg
+            });
+        },
+    })
+    return false;
+});
+
+    $("#upload").change(function () {
+        const file = this.files[0];
+        if (file) {
+            let reader = new FileReader();
+            reader.onload = function (event) {
+                $("#upload").parent().find('span').remove();
+                $("#upload").parent().append(`<span class="d-none d-sm-block"><i class="bx bx-checkbox-checked me-1"></i>Fotoğraf yüklendi</span>`);
+                $("#upload").parent().removeClass('btn-primary').addClass('btn-success');
+                // $("#imgPreview").parent().removeClass("d-none");
+                // $("#imgPreview").parent().addClass("d-inline-block");
+            };
+            reader.readAsDataURL(file);
+        }
     });
 </script>
