--- a/views/admin/include/header.ejs
+++ b/views/admin/include/header.ejs
@@ -124,7 +124,7 @@
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                  <a class="nav-link dropdown-toggle hide-arrow d-flex justify-content-between align-items-center" href="<%=authenticateUser.image%>">
+                  <a class="nav-link dropdown-toggle hide-arrow d-flex justify-content-between align-items-center">
                     <div class="avatar avatar-online">
                       <img src="<%=authenticateUser.image%>" alt class="w-100 h-100 h-auto rounded-circle" />
                     </div>
