--- a/views/admin/services/serviceDetail.ejs
+++ b/views/admin/services/serviceDetail.ejs
@@ -50,6 +50,12 @@
                       <h5 class="card-header">Resimler</h5>
                       <hr class="my-0" />
                       <div class="owl-carousel p-4">
+                        <% if(service.imageUrls.length < 1) { %>
+                          <div>
+                            <i class="bx bx-error-circle text-danger"></i>
+                            <span class="text-danger">Resim yüklenmemiş</span>
+                          </div>
+                        <% } %>
                         <% for (var l = service.imageUrls.length, i = 0; i < l; i++) { %>
                           <div class="border rounded position-relative" style="width: 100%; height: 200px;">
                             <img class="p-4" style="object-fit: contain; width: 100%; height: 100%;" src="<%=service.imageUrls[i]%>" alt="Service Image">
@@ -68,23 +74,27 @@
                           </div>
                         <% } %>
                       </div>
-                      <div class="d-flex justify-content-around align-items-center p-2">
-                        <label for="upload" class="btn btn-primary me-2 mb-4 w-100" tabindex="0">
-                          <span class="d-none d-sm-block"><i class="bx bx-image-add me-1"></i>Yeni fotoğraf</span>
-                          <i class="bx bx-upload d-block d-sm-none"></i>
-                          <input
-                            type="file"
-                            id="upload"
-                            name="image"
-                            class="account-file-input"
-                            hidden
-                            accept="image/png, image/jpeg"
-                          />
-                        </label>
-                        <label for="upload" class="btn btn-primary me-2 mb-4 w-100" tabindex="0">
-                          <span class="d-none d-sm-block"><i class="bx bx-check me-1"></i>Kaydet</span>
-                        </label>
-                      </div>
+                      <form id="imageUploadForm" method="PATCH" enctype="multipart/form-data"  onsubmit="return false">
+                        <input class="form-control" type="hidden" name="updateServiceId" id="updateServiceId" value="<%=service._id%>" />
+                        <div class="d-flex justify-content-around align-items-center p-2">
+                          <label for="upload" class="btn btn-primary me-2 mb-4 w-100" tabindex="0">
+                            <span class="d-none d-sm-block"><i class="bx bx-image-add me-1"></i>Yeni fotoğraf</span>
+                            <i class="bx bx-upload d-block d-sm-none"></i>
+                            <input
+                              type="file"
+                              id="upload"
+                              name="images"
+                              class="account-file-input"
+                              hidden
+                              accept="image/png, image/jpeg"
+                              multiple
+                            />
+                          </label>
+                          <button type="submit" for="upload" class="btn btn-primary me-2 mb-4 w-100 add-new-photo" tabindex="0">
+                            <span class="d-none d-sm-block"><i class="bx bx-check me-1"></i>Kaydet</span>
+                          </button>
+                        </div>
+                      </form>
                     </div>
                   </div>
                 </div>
@@ -133,10 +143,48 @@
     });
 
     $(".delete-image").on('click', function(e) {
-    e.preventDefault();
-    $.ajax({
-        url : this.href,
-        type : "GET",
+      e.preventDefault();
+      $.ajax({
+          url : this.href,
+          type : "GET",
+          success : (response) => {
+              Swal.fire({
+                  icon: "success",
+                  text: response.msg
+              });
+          },
+          error : (xhr, status, error) => {
+              Swal.fire({
+                  icon: "error",
+                  text: xhr.responseJSON.msg
+              });
+          },
+      })
+      return false;
+    });
+
+    $("#upload").change(function () {
+      const file = this.files[0];
+      if (file) {
+        let reader = new FileReader();
+        reader.onload = function (event) {
+            $("#upload").parent().find('span').remove();
+            $("#upload").parent().append(`<span class="d-none d-sm-block"><i class="bx bx-checkbox-checked me-1"></i>Fotoğraf yüklendi</span>`);
+            $("#upload").parent().removeClass('btn-primary').addClass('btn-success');
+            // $("#imgPreview").parent().removeClass("d-none");
+            // $("#imgPreview").parent().addClass("d-inline-block");
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
+    $('#imageUploadForm').on('submit',function(e) {
+      e.preventDefault();
+      var formData = new FormData(this);
+      $.ajax({
+        url : "http://localhost:3000/api/kurumsal/services/updateServiceImages",
+        type : "PATCH",
+        data : formData,
         success : (response) => {
             Swal.fire({
                 icon: "success",
@@ -149,22 +197,9 @@
                 text: xhr.responseJSON.msg
             });
         },
-    })
-    return false;
-});
-
-    $("#upload").change(function () {
-        const file = this.files[0];
-        if (file) {
-            let reader = new FileReader();
-            reader.onload = function (event) {
-                $("#upload").parent().find('span').remove();
-                $("#upload").parent().append(`<span class="d-none d-sm-block"><i class="bx bx-checkbox-checked me-1"></i>Fotoğraf yüklendi</span>`);
-                $("#upload").parent().removeClass('btn-primary').addClass('btn-success');
-                // $("#imgPreview").parent().removeClass("d-none");
-                // $("#imgPreview").parent().addClass("d-inline-block");
-            };
-            reader.readAsDataURL(file);
-        }
+        cache: false,
+        contentType: false,
+        processData: false
+      });
     });
 </script>
