--- a/views/admin/include/header.ejs
+++ b/views/admin/include/header.ejs
@@ -94,7 +94,7 @@
                 <i class="menu-icon tf-icons bx bx-list-plus"></i>
                 <div data-i18n="Analytics">Hizmetler</div>
               </a>
-          </li>
+            </li>
             <li class="menu-item" id="logout">
                 <a href="javascript:void(0)" class="menu-link">
                   <i class="menu-icon tf-icons bx bx-log-out-circle"></i>
@@ -122,7 +122,17 @@
 
             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
               <ul class="navbar-nav flex-row align-items-center ms-auto">
-                <!-- User -->
+                <% if(authenticateUser.role === 'admin') { %>
+                  <a href="http://localhost:3000/api/kurumsal/admin/loginHistories">
+                    <li data-bs-toggle="tooltip"
+                      data-popup="tooltip-custom"
+                      data-bs-placement="bottom"
+                      class="avatar d-flex justify-content-center align-items-center"
+                      title="Giriş kayıtları">
+                          <img src="/adminpanel/assets/img/icons/unicons/history.png" alt="">
+                    </li>
+                  </a>
+                <% } %>
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a class="nav-link dropdown-toggle hide-arrow d-flex justify-content-between align-items-center">
                     <div class="avatar avatar-online">
