--- a/views/admin/services/createService.ejs
+++ b/views/admin/services/createService.ejs
@@ -6,13 +6,13 @@
               <div class="row">
                 <div class="col-lg-12 mb-4 order-0">
                     <div class="card mb-4">
-                        <h5 class="card-header">Hizmet Ekle</h5>
+                        <h5 class="card-header font12px">Hizmet Ekle</h5>
                         <hr class="my-0" />
                           <form id="createService" method="POST" enctype="multipart/form-data" onsubmit="return false">
                             <div class="card-body">
                               <div class="row">
                                 <div class="mb-3 col-12">
-                                  <label for="firstName" class="form-label">Resim Ekle</label>
+                                  <label for="firstName" class="form-label font10px">Resim Ekle</label>
                                   <div class="row">
                                     <div class="col-2 add-image d-flex justify-content-center align-items-center px-2 mb-2">
                                       <label 
@@ -37,9 +37,9 @@
                                   </div>
                                 </div>
                                 <div class="mb-3 col-12">
-                                  <label for="firstName" class="form-label">Hizmet adı</label>
+                                  <label for="firstName" class="form-label font10px">Hizmet adı</label>
                                   <input
-                                    class="form-control"
+                                    class="form-control font12px"
                                     type="text"
                                     id="name"
                                     name="name"
@@ -47,14 +47,14 @@
                                   />
                                 </div>
                                 <div class="mb-3 col-12">
-                                  <label for="description" class="form-label">Hizmet açıklaması</label>
-                                  <textarea class="form-control" type="text" name="description" id="description"></textarea>
+                                  <label for="description" class="form-label font10px">Hizmet açıklaması</label>
+                                  <textarea class="form-control font12px" type="text" name="description" id="description"></textarea>
                                 </div>
                               </div>
                               <div class="mt-2">
-                                <button type="submit" class="btn btn-primary me-2">Ekle</button>
-                                <button type="reset" class="btn btn-outline-primary">
-                                  <a style="color:black" href="http://localhost:3000/api/kurumsal/services">Geri dön</a>
+                                <button type="submit" class="btn btn-primary me-2 font12px">Ekle</button>
+                                <button type="reset" class="btn btn-danger font12px">
+                                  <a class="text-white" href="http://localhost:3000/api/kurumsal/services">Geri dön</a>
                                 </button>
                               </div>
                             </div>
