--- a/views/admin/userDetail.ejs
+++ b/views/admin/userDetail.ejs
@@ -6,7 +6,7 @@
               <div class="row">
                 <div class="col-lg-12 mb-4 order-0">
                   <div class="card mb-4">
-                    <h5 class="card-header">Profilim</h5>
+                    <h5 class="card-header font12px">Profilim</h5>
                     <div class="card-body">
                       <div class="d-flex align-items-start align-items-sm-center gap-4">
                         <% if(!user.image) { %>
@@ -27,7 +27,7 @@
                         <form id="formAccountSettings" method="PATCH" onsubmit="return false">
                           <div class="button-wrapper">
                             <label for="upload" class="btn btn-primary me-2 mb-4" tabindex="0">
-                                <span class="d-none d-sm-block"><i class="bx bx-image-add me-1"></i>Yeni fotoğraf</span>
+                                <span class="d-none d-sm-block font12px"><i class="bx bx-image-add me-1"></i>Yeni fotoğraf</span>
                                 <i class="bx bx-upload d-block d-sm-none"></i>
                                 <input
                                 type="file"
@@ -38,9 +38,9 @@
                                 accept="image/png, image/jpeg"
                                 />
                             </label>
-                            <p class="text-muted mb-0">E-Posta Adresi : <span class="text-primary"><%=user.email%></span></p>
-                            <p class="text-muted mb-0">Kullanıcı Adı : <span class="text-primary"><%=user.username%></span></p>
-                            <p class="text-muted mb-0">Yetki : <span class="text-danger"><%=user.role%></span></p>
+                            <p class="text-muted mb-0 font12px">E-Posta Adresi : <span class="text-primary"><%=user.email%></span></p>
+                            <p class="text-muted mb-0 font12px">Kullanıcı Adı : <span class="text-primary"><%=user.username%></span></p>
+                            <p class="text-muted mb-0 font12px">Yetki : <span class="text-danger"><%=user.role%></span></p>
                             </div>
                           </div>
                         </div>
@@ -49,9 +49,9 @@
                             <input class="form-control" type="hidden" name="updateUserId" id="updateUserId" value="<%=user._id%>" />
                             <div class="row">
                               <div class="mb-3 col-md-6">
-                                <label for="firstName" class="form-label">ad</label>
+                                <label for="firstName" class="form-label font10px">ad</label>
                                 <input
-                                  class="form-control"
+                                  class="form-control font12px"
                                   type="text"
                                   id="name"
                                   name="name"
@@ -60,13 +60,13 @@
                                 />
                               </div>
                               <div class="mb-3 col-md-6">
-                                <label for="lastName" class="form-label">soyad</label>
-                                <input class="form-control" type="text" name="surname" id="surname" value="<%=user.surname%>" />
+                                <label for="lastName" class="form-label font10px">soyad</label>
+                                <input class="form-control font12px" type="text" name="surname" id="surname" value="<%=user.surname%>" />
                               </div>
                               <% if(authenticateUser.role === 'admin') { %>
                               <div class="mb-3 col-md-6">
-                                <label for="role" class="form-label">yetki</label>
-                                <select class="form-select role-select" aria-label="Default select example">
+                                <label for="role" class="form-label font10px">yetki</label>
+                                <select class="form-select role-select font12px" aria-label="Default select example">
                                   <option value="demo">demo</option>
                                   <option value="user">user</option>
                                   <option value="admin">admin</option>
@@ -75,9 +75,9 @@
                               <% } %>
                             </div>
                             <div class="mt-2">
-                              <button type="submit" class="btn btn-primary me-2">Güncelle</button>
-                              <button type="reset" class="btn btn-outline-primary">
-                                <a style="color:black" href="http://localhost:3000/api/kurumsal/users">Geri dön</a>
+                              <button type="submit" class="btn btn-primary me-2 font12px">Güncelle</button>
+                              <button type="reset" class="btn btn-danger font12px">
+                                <a class="text-white" href="http://localhost:3000/api/kurumsal/users">Geri dön</a>
                               </button>
                             </div>
                           </form>
@@ -92,23 +92,23 @@
               <div class="row">
                 <div class="col-lg-12 mb-4 order-0">
                   <div class="card mb-4">
-                    <h5 class="card-header">Şifre Değiştir</h5>
+                    <h5 class="card-header font12px">Şifre Değiştir</h5>
                       <hr class="my-0" />
                       <div class="card-body">
                         <form id="passwordChange" method="PATCH" onsubmit="return false">
                           <input class="form-control" type="hidden" name="updateUserId" id="updateUserId" value="<%=user._id%>" />
                           <div class="row">
                             <div class="mb-3 col-6">
-                              <label for="old-password" class="form-label">Eski şifre</label>
-                              <input class="form-control" type="password" id="old-password" name="oldPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" />
+                              <label for="old-password" class="form-label font10px">Eski şifre</label>
+                              <input class="form-control font12px" type="password" id="old-password" name="oldPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" />
                             </div>
                             <div class="mb-3 col-6">
-                              <label for="new-password" class="form-label">Yeni şifre</label>
-                              <input class="form-control" type="password" id="new-password" name="newPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"/>
+                              <label for="new-password" class="form-label font10px">Yeni şifre</label>
+                              <input class="form-control font12px" type="password" id="new-password" name="newPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"/>
                             </div>
                           </div>
                           <div class="mt-2">
-                            <button type="submit" class="btn btn-primary me-2">Güncelle</button>
+                            <button type="submit" class="btn btn-primary me-2 font12px">Güncelle</button>
                           </div>
                         </form>
                       </div>
