--- a/views/admin/createUser.ejs
+++ b/views/admin/createUser.ejs
@@ -6,15 +6,15 @@
               <div class="row">
                 <div class="col-lg-12 mb-4 order-0">
                     <div class="card mb-4">
-                        <h5 class="card-header">Kullanıcı Ekle</h5>
+                        <h5 class="card-header font12px">Kullanıcı Ekle</h5>
                         <hr class="my-0" />
                           <form id="createUser" method="POST" onsubmit="return false">
                             <div class="card-body">
                               <div class="row">
                                 <div class="mb-3 col-md-6">
-                                  <label for="firstName" class="form-label">ad</label>
+                                  <label for="firstName" class="form-label font10px">ad</label>
                                   <input
-                                    class="form-control"
+                                    class="form-control font12px"
                                     type="text"
                                     id="name"
                                     name="name"
@@ -22,24 +22,24 @@
                                   />
                                 </div>
                                 <div class="mb-3 col-md-6">
-                                  <label for="lastName" class="form-label">soyad</label>
-                                  <input class="form-control" type="text" name="surname" id="surname" />
+                                  <label for="lastName" class="form-label font10px">soyad</label>
+                                  <input class="form-control font12px" type="text" name="surname" id="surname" />
                                 </div>
                                 <div class="mb-3 col-md-6">
-                                  <label for="email" class="form-label">email</label>
-                                  <input class="form-control" type="text" name="email" id="email" />
+                                  <label for="email" class="form-label font10px">email</label>
+                                  <input class="form-control font12px" type="text" name="email" id="email" />
                                 </div>
                                 <div class="mb-3 col-md-6">
-                                  <label for="username" class="form-label">kullanıcı adı</label>
-                                  <input class="form-control" type="text" name="username" id="username" />
+                                  <label for="username" class="form-label font10px">kullanıcı adı</label>
+                                  <input class="form-control font12px" type="text" name="username" id="username" />
                                 </div>
                                 <div class="mb-3 col-md-6">
-                                  <label for="password" class="form-label">şifre</label>
-                                  <input class="form-control" type="text" name="password" id="password" />
+                                  <label for="password" class="form-label font10px">şifre</label>
+                                  <input class="form-control font12px" type="text" name="password" id="password" />
                                 </div>
                                 <div class="mb-3 col-md-6">
-                                  <label for="role" class="form-label">yetki</label>
-                                  <select class="form-select role-select" aria-label="Default select example">
+                                  <label for="role" class="form-label font10px">yetki</label>
+                                  <select class="form-select role-select font12px" aria-label="Default select example">
                                     <option value="demo">demo</option>
                                     <option value="user">user</option>
                                     <option value="admin">admin</option>
@@ -47,8 +47,8 @@
                                 </div>
                               </div>
                               <div class="mt-2">
-                                <button type="submit" class="btn btn-primary me-2 deneme">Ekle</button>
-                                <button type="reset" class="btn btn-outline-primary">
+                                <button type="submit" class="btn btn-primary me-2 font12px">Ekle</button>
+                                <button type="reset" class="btn btn-outline-primary font12px">
                                   <a style="color:black" href="http://localhost:3000/api/kurumsal/users">Geri dön</a>
                                 </button>
                               </div>
