--- a/views/admin/homePage.ejs
+++ b/views/admin/homePage.ejs
@@ -117,6 +117,34 @@
                     </div>
                   </div>
                 </div>
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 order-0">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="card-title d-flex align-items-start justify-content-between">
+                        <div class="avatar flex-shrink-0">
+                          <img src="/adminpanel/assets/img/icons/unicons/service.png" alt="Credit Card" class="rounded" />
+                        </div>
+                        <div class="dropdown">
+                          <button
+                            class="btn p-0"
+                            type="button"
+                            id="cardOpt4"
+                            data-bs-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                          >
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt4">
+                            <a class="dropdown-item" href="javascript:void(0);">Görüntüle</a>
+                          </div>
+                        </div>
+                      </div>
+                      <span class="d-block mb-1">Hizmet sayısı</span>
+                      <h5 class="card-title text-nowrap mb-0 text-danger"><%= totalNumberOfService %></h5>
+                    </div>
+                  </div>
+                </div>
               </div>
               </div>
             <!-- / Content -->
